force-app/main/default/objects/Persistence_Outlook__c.object
<CustomObject>
    <fields>
        <fullName>Career_Segment__c</fullName>
        <description>CAREER_SEGMENT</description>
        <label>Career</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <description>Contains the date of the last detected change</description>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Direction__c</fullName>
        <label>Change Direction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Flg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CHANGE_FLG</description>
        <label>Change Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Curr_Cont_Prediction_Level__c</fullName>
        <description>Value from 0-10 that defines how likely a student is to return</description>
        <label>Current Outlook Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CURRENT_FLG</description>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Level_Descr__c</fullName>
        <description>CURRENT_LEVEL_DESCR</description>
        <label>Current Level Description</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Segment__c</fullName>
        <description>ONLINE_SEGMENT</description>
        <label>Online Segment</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prediction_STRM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PREDICTION_STRM</description>
        <label>Prediction Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Persistence Outlooks</relationshipLabel>
        <relationshipName>Persistence_Outlooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Cont_Prediction_Level__c</fullName>
        <description>Value from 0-10 that defines how likely a student is to return, before the change.</description>
        <label>Previous Outlook Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Date__c</fullName>
        <description>SNAP_DATE</description>
        <label>Snap Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Persistence Outlooks</relationshipLabel>
        <relationshipName>Persistence_Outlooks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Contains the necessary information for the civitas section in portals.</description>
    <label>Persistence Outlook</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Persistence Outlook Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persistence Outlooks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Change_Date__c</columns>
        <columns>Change_Direction__c</columns>
        <columns>Curr_Cont_Prediction_Level__c</columns>
        <columns>Prev_Cont_Prediction_Level__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>