force-app/main/default/objects/Persistence_Outlook__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Change_Date__c</columns>
    <columns>Change_Direction__c</columns>
    <columns>Curr_Cont_Prediction_Level__c</columns>
    <columns>Prev_Cont_Prediction_Level__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>